--- a/Nerds/index.html
+++ b/Nerds/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="src/css/style.css" rel="stylesheet">
     <title>Main</title>
   </head>
   <body>
