--- a/Pink/form.html
+++ b/Pink/form.html
@@ -150,7 +150,7 @@
   <script src="src/js/Form.js"></script>
   <script src="bower_components/mustache.js/mustache.min.js"></script>
   <script src="bower_components/moment/min/moment.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false&key=AIzaSyDPjKPXJxoMFzM4EY6uCpVcflDpfoBSLTo"></script>
   <script>
     function initialize() {
         var mapOptions = {
