--- a/Pink/index.html
+++ b/Pink/index.html
@@ -151,7 +151,7 @@
         list.classList.remove("main-menu--open");
     })
   </script>
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false&key=AIzaSyDPjKPXJxoMFzM4EY6uCpVcflDpfoBSLTo"></script>
   <script> 
     function initialize() {
         var mapOptions = {
