--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<br>
 		<a href="Nerds/index.html">Nerds</a>
 		<br>
-		<a href="Pink/index.html">Pink</a>
+		<a href="Pink/src/index.html">Pink</a>
 		<br>
 		<a href="Technomart/index.html">Technomart</a>
 		<br>
