--- a/Nerds/index.html
+++ b/Nerds/index.html
@@ -162,7 +162,7 @@
       })
     </script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false&key=AIzaSyDPjKPXJxoMFzM4EY6uCpVcflDpfoBSLTo"></script>
     <script> 
       function initialize() {
           var mapOptions = {
